# biomodelbench

./: .gitignore  AUDIT_vep_traitgym_mendelian.md  LICENSE  README.md  RESULTS.md  SPEC.md  pyproject.toml
.github/workflows/: pages.yml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  leaderboard-table.tsx  page.tsx  sota-chart.tsx
dashboard/app/tasks/: page.tsx
dashboard/components/: Markdown.tsx
dashboard/lib/: tasks.ts
docs/: variant_effect_prediction.md
harness/: image.py  modal_runner.py
shared/: extract_bigwig_features.py
tasks/_template/: .gitignore  README.md  build.py  grade.py  prompt.md  task.yaml
tasks/bacdive_gram/: .gitignore  README.md  build.py  grade.py  task.yaml
tasks/bacdive_gram/bundle/: prompt.md
tasks/bacdive_gram_v0/: .gitignore  README.md  build.py  grade.py  prompt.md  task.yaml
tasks/bacdive_gram_v0/bundle/: prompt.md
tasks/bacdive_multitrait/: .gitignore  README.md  build.py  grade.py  prompt.md  task.yaml
tasks/bacdive_multitrait_v0/: .gitignore  README.md  build.py  grade.py  prompt.md  task.yaml
tasks/vep_c_open_v0/: README.md  build.py  grade.py  task.yaml
tasks/vep_c_open_v0/bundle/: prompt.md
tasks/vep_c_ot_transfer_v2/: README.md  build.py  grade.py  prompt.md  task.yaml
tasks/vep_multieval/: .gitignore  README.md  build.py  grade.py  prompt.md  task.yaml
tasks/vep_multieval_v0/: .gitignore  README.md  build.py  grade.py  prompt.md  task.yaml
tasks/vep_multieval_v1/: README.md  build.py  grade.py  prompt.md  task.yaml
(+147 files in other folders)
