[project]
name = "biomodelbench"
version = "0.1.0"
description = "Agentic benchmark for biological modeling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.63",
    "pandas>=2",
    "pyarrow>=14",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyBigWig>=0.3",
    "requests>=2.31",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
